[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Textures/Toilet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game/Toilet.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/Walls/Breakable05.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Toilet.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Drop water.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 56.0
height = 112.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 96.0
height = 80.0

[node name="Toilet" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Dirt" type="Sprite" parent="."]
unique_name_in_owner = true
position = Vector2( -8, 0 )
texture = ExtResource( 3 )

[node name="DropArea" type="Area2D" parent="."]
unique_name_in_owner = true
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropArea"]
visible = false
position = Vector2( -24, 0 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Water" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource( 4 )

[node name="Drop" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource( 5 )

[connection signal="body_entered" from="DropArea" to="." method="_on_DropArea_body_entered"]
[connection signal="body_exited" from="DropArea" to="." method="_on_DropArea_body_exited"]
